--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -275,26 +275,7 @@
     }
 
 
-    @media screen and (max-width: 1178px) {
-        .image2 {
-            display: none;
-        }
-
-        .main-bottom-content h4 {
-            font-size: 15px !important;
-        }
-
-        .main-bottom-content h6 {
-            font-size: 13px !important;
-        }
-    }
-
-    @media screen and (max-width: 914px) {
-        .main-bottom-bottom {
-            display: flex;
-            flex-direction: column;
-        }
-    }
+  
 
     /*Table*/
     .main-right-bottom-down {
@@ -344,102 +325,7 @@
     }
 
 
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-
-        }
-
-        .table td {
-
-            font-size: 12px;
-
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-
-        }
-
-
-
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
-
-
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-
-
-        .table td {
-
-            font-size: 9px;
-
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
-        }
-
-        .main-right-bottom {
-            width: 140%;
-        }
-
-
-
-    }
+  
 
     /*Empty table UI*/
     .main-right-bottom-two {
@@ -765,21 +651,7 @@
 
     }
 
-    @media screen and(max-width: 957px) {
-
-        .updateData {
-            margin-left: 10px;
-
-        }
-
-        .top-personal-details {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-        }
-
-    }
+  
 
     /*Update success*/
     .success_popup_box {
@@ -1000,14 +872,7 @@
     }
 
 
-    @media screen and(max-width: 917px) {
-
-        .personal-details-popup {
-            display: flex;
-            flex-direction: column;
-        }
-
-    }
+   
 
     .overlay {
         position: fixed;
@@ -1157,8 +1022,154 @@
 
     }
 
+      /* @media screen and (max-width: 1178px) {
+        .image2 {
+            display: none;
+        }
 
-    @media screen and(max-width: 1307px) {
+        .main-bottom-content h4 {
+            font-size: 15px !important;
+        }
+
+        .main-bottom-content h6 {
+            font-size: 13px !important;
+        }
+    }
+
+    @media screen and (max-width: 914px) {
+        .main-bottom-bottom {
+            display: flex;
+            flex-direction: column;
+        }
+    } */
+
+
+      /* @media screen and (max-width: 1118px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 1%;
+
+        }
+
+        .table td {
+
+            font-size: 12px;
+
+        }
+
+        .table-header {
+            font-size: 14px;
+        }
+
+        .table-row img {
+            width: 20px;
+            height: 20px;
+
+        }
+
+
+
+    }
+
+    @media screen and (max-width:862px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 0;
+            padding-left: 5%;
+        }
+
+        .main-right-top-one input {
+            width: 20%;
+
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+
+        }
+
+
+        .line {
+            width: 86px;
+            height: 2px;
+
+        }
+
+        .table td {
+
+            font-size: 10px;
+
+        }
+
+        .table-header {
+            font-size: 12px;
+        }
+
+        .table-row img {
+            width: 17px;
+            height: 17px;
+
+        }
+
+
+    }
+
+    @media screen and (max-width: 692px) {
+
+
+        .table td {
+
+            font-size: 9px;
+
+        }
+
+        .table-header {
+            font-size: 10px;
+        }
+
+        .table-row img {
+            width: 15px;
+            height: 15px;
+
+        }
+
+        .main-right-bottom {
+            width: 140%;
+        }
+
+
+
+    } */
+
+      /* @media screen and(max-width: 957px) {
+
+        .updateData {
+            margin-left: 10px;
+
+        }
+
+        .top-personal-details {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+    } */
+
+     /* @media screen and(max-width: 917px) {
+
+        .personal-details-popup {
+            display: flex;
+            flex-direction: column;
+        }
+
+    } */
+
+
+
+
+    /* @media screen and(max-width: 1307px) {
 
         .vehicle-details-labels {
             padding-left: 40px;
@@ -1167,7 +1178,297 @@
         .vehicle-details-values {
             padding-left: 40px;
         }
+    } */
+
+    @media screen and (max-width: 1118px) {
+        .table td {
+            font-size: 12px;
+        }
+
+        .table-header {
+            font-size: 14px;
+        }
+
+        .table-row img {
+            width: 20px;
+            height: 20px;
+        }
+
+        .main-right-top-search {
+            margin-left: 40px;
+        }
+
+
+        .main-right-top-profile img{
+            width: 40px;
+            height: 40px;
+            margin-top: 3px;
+        }
+
+        .main-right{
+            overflow-x: hidden;
+        }
     }
+
+    @media screen and (max-width: 1108px) {
+        .notification_popup h1 {
+            font-size: 19px;
+            letter-spacing: 0.001rem;
+            margin-top: 5px;
+            margin-left: 8px;
+        }
+
+        .notification_popup {
+            width: 26%;
+        }
+    }
+
+    @media screen and (max-width:996px) {
+        .main-right-bottom {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 140%;
+        }
+
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+        .notification_popup {
+            width: 28%;
+        }
+
+        .main-right-top-profile-cont p{
+            font-size: 12px;
+        }
+
+        .personal-details-popup-form{
+            width: 600px;
+        }
+    }
+
+    @media screen and (max-width:862px) {
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+        }
+
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+
+        .notification_popup {
+            top: 11%;
+            right: 10%;
+            width: 35%;
+        }
+
+        .personal-details-popup-form{
+            width: 500px;
+        }
+
+        .updateData input{
+            width: 75%;
+        }
+    }
+
+    @media screen and (max-width:660px) {
+        .notification_popup {
+            width: 35%;
+            right: 10%;
+        }
+
+        .main-right-top-four-component p{
+            display: none;
+
+        }
+
+        .main-right-top-four-component{
+            width: auto;
+        }
+
+        .personal-details-popup-form{
+            width: 400px;
+        }
+
+        .personal-details-left img{
+            width: 100px;
+            height: 100px;
+        }
+
+        .personal-details-right-labels span, .personal-details-right-values span, .personal-details-left p{
+            font-size: 12px;
+        }
+
+        .vehicle-details-popup-form{
+            width: 400px;
+        }
+
+        .vehicle-details-labels{
+            padding-left: 40px;
+        }
+
+        .vehicle-details-values{
+            padding-left: 70px;
+        }
+
+        .updateData input{
+            width: 70%;
+        }
+
+        .popup{
+            width: 300px;
+        }
+
+        .popup1{
+            width: 300px;
+        }
+
+
+      
+    }
+
+    @media screen and (max-width:540px) {
+        .main-right-bottom {
+            width: 160%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 160%;
+        }
+
+        .main-right-bottom-down {
+            width: 160%;
+        }
+
+        .notification_popup {
+            width: 46%;
+            left: 15%;
+        }
+
+        .main-right-top-four-left{
+            margin-left: 35px;
+            padding-left: 0;
+        }
+
+        .main-right-top-four-left button{
+            width: 60px;
+        }
+
+        .main-right-top-four-left p{
+            display: none;
+        }
+
+        .main-right-top-four-right{
+            margin-right: 40%;
+        }
+
+        .main-right-top-profile-cont h3{
+            font-size: 16px;
+        }
+
+        .line{
+            margin-left: -10px !important;
+        }
+
+        .vehicle-details-popup-form{
+            width: 300px;
+        }
+
+        .vehicle-details-labels span{
+            font-size: 12px;
+        }
+
+        .vehicle-details-values span{
+            font-size: 12px;
+        }
+
+       
+
+      
+    }
+
+    @media screen and (max-width: 475px) {
+        .main-right-top-profile-cont h3{
+            display: none;
+        }
+
+        .main-right-top-profile-cont p{
+            display: none;
+        }
+
+        .main-right-top-profile img{
+            margin-right: 5px;
+        }
+
+        .main-right-top-three-content{
+            margin-right: 0;
+
+        }
+
+        .main-right-top-three-content p{
+            font-size: 12px;
+        }
+
+    }
+
+    @media screen and (max-width: 844px) {
+        .main-right-top-notification {
+            margin-left: 5%;
+        }
+        .main-right-top-search {
+            margin-left: 1px;
+        }
+
+        .main-right-bottom-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-container-top {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-container-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+    }
+
+    @media screen and (max-width:700px) {
+    
+        .main-right-top-search {
+            width: 35%;
+        }
+
+        .main-right-top-search i {
+            left: 10px;
+            margin-left: 10px;
+        }
+
+        .main-right-top-search input {
+            height: 28px;
+            margin-left: 10px;
+        }
+
+        .main-right-top-three{
+            margin-bottom: 2%;
+        }
+
+        .line{
+            margin-left: -20px;
+        }
+    }
+
+
+
 
 
 }
