--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -1,4 +1,5 @@
-* {
+.Login-main {
+  * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -584,4 +585,5 @@ input[type=file] {
   background: rgba(0, 0, 0, 0.1);
   z-index: 98;
   display: none;
+  }
 }
