--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -6,7 +6,7 @@
 }
 
 a {
-  color: #333;
+  color: #13601b;
 }
 
 body,
@@ -88,10 +88,10 @@ form.sign-in-form {
 }
 
 .forgot {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   text-decoration: none;
-  margin-right: 225px;
-  margin-top: 20px;
+  margin-right: 257px;
+  margin-top: 13px;
   font-size: 13px;
   color: black;
 }
@@ -153,21 +153,56 @@ input[type=file] {
   margin-right: 30px;
 }
 
+.edit-profile-content-profile {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 29.7px;
+}
+
+.edit-profile-content-profile-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-profile-main-image {
+  height: 135px;
+  width: 135px;
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.edit-profile-second-image {
+  height: 29px;
+  width: 29px;
+  margin-top: -28px;
+  margin-left: 95px;
+  flex: 1;
+}
+
 .title {
   font-size: 2.2rem;
   color: #444;
   margin-bottom: 10px;
 }
 
+.input-field-container {
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 3px;
+}
+
+
+
 .input-fieldlog {
-  max-width: 380px;
-  width: 100%;
-  height: 40px;
+  width: 400px;
+  height: 45px;
   background-color: #f5f6fa;
-  margin: 10px 0;
+  margin: 5px 0;
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 5% 95%;
+  grid-template-columns: 10% 90%;
   padding: 0 .9rem;
   border: 1px solid #b8b7b7;
   align-items: center;
@@ -346,7 +381,7 @@ input[type=file] {
   font-size: 14px;
   height: 14px;
   letter-spacing: 0.03rem;
-  margin-top:2px ;
+  margin-top:1px ;
 }
 
 .cont-region {
