--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,6 +137,8 @@
 @import url('Component/Admin/Admin_Discount_Agent_Add.css');
 @import url('Component/Admin/Admin_Discount_Agent_View.css');
 @import url('Component/Admin/Admin_Discount_Agent.css');
+@import url('Component/Admin/Admin_DicountAgent_Main.css');
+
 
 @import url('Component/Admin/Admin_Collector.css');
 
