--- a/public/css/Component/Admin/Admin_Admin_View.css
+++ b/public/css/Component/Admin/Admin_Admin_View.css
@@ -57,6 +57,7 @@
 
 
 
+
     @media screen and (max-width:862px) {
 
         .main-right-top-three-content p {
@@ -122,19 +123,24 @@
 
     /*Delete confirm popup*/
     .delete_confirm {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
         display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: var(--main-text-color);
+    }
 
+    .delete_confirm.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .delete_confirm .popup {
