--- a/public/css/Component/Admin/Admin_Garbage_Types_View.css
+++ b/public/css/Component/Admin/Admin_Garbage_Types_View.css
@@ -15,6 +15,11 @@
         color: var(--green-color-one);
     }
 
+    .main-right-top-one {
+        display: flex;
+        justify-content: end;
+    }
+
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
@@ -32,25 +37,22 @@
     }
 
     .table-header {
-        grid-template-columns: 13% 13% 14% 16% 16% 14% 14%;
+        grid-template-columns: 13% 14% 20% 16% 16% 11% 10%;
     }
 
     .table-row {
-        height: 52px;
-        display: grid;
-        grid-template-columns: 13% 13% 14% 16% 16% 14% 14%;
+        grid-template-columns: 13% 14% 20% 16% 16% 11% 10%;
     }
 
     .table td {
         height: 55px;
     }
 
-    .manager_img{
+    .manager_img {
         width: 35px !important;
         height: 35px !important;
         border-radius: 50%;
     }
-
 
     td img {
         margin: 6px;
@@ -61,8 +63,6 @@
         height: 25px;
         cursor: pointer;
     }
-
-
 
     .overlay {
         position: fixed;
@@ -76,89 +76,8 @@
     }
 
     /* ------ */
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-        }
-
-        .table td {
-            font-size: 12px;
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-        }
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-
-        }
 
 
-        .line {
-            width: 86px;
-            height: 2px;
-
-        }
-
-        .table td {
-
-            font-size: 10px;
-
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-        .table td {
-            font-size: 9px;
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-        }
-
-        .main-right-bottom {
-            width: 140%;
-        }
-    }
-
-    
     /*Update popup*/
     .update_click {
         display: flex;
@@ -180,8 +99,6 @@
 
     .update_click.active {
         transform: translate(-50%, -50%) scale(1);
-       
-       
     }
 
     .popup-form {
@@ -218,8 +135,6 @@
         align-items: center;
         justify-content: center;
         flex-direction: row;
-
-
     }
 
     .updatebtn {
@@ -238,7 +153,7 @@
 
     }
 
-    .updatebtn:hover{
+    .updatebtn:hover {
         background: var(--button-hover-green);
     }
 
@@ -255,11 +170,10 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-
     }
 
-    .cancelbtn1:hover{
-        background: #a7a1a1 ;
+    .cancelbtn1:hover {
+        background: #a7a1a1;
     }
 
     .updateData {
@@ -270,7 +184,6 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-
     }
 
     .A {
@@ -286,7 +199,6 @@
         height: 4px;
         background-color: var(--green-color-one);
         margin-bottom: 15px;
-
     }
 
     .updateData input {
@@ -298,17 +210,13 @@
         background-color: #fff;
         border: 1px solid #ced4da;
         border-radius: 4px;
-
-
     }
 
-    .updateData input:focus{
+    .updateData input:focus {
         border-color: var(--green-color-one);
-        
     }
 
     .updateData label {
-
         margin-bottom: 7px;
     }
 
@@ -321,22 +229,6 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    @media screen and(max-width: 946px) {
-
-        .updateData {
-            margin-left: 10px;
-
-        }
-
-        .cancelbtn1 {
-            width: 100px;
-        }
-
-        .updatebtn {
-            width: 100px;
-        }
-
-    }
 
     /*Update success*/
     .center_worker_update_success {
@@ -398,9 +290,118 @@
 
     }
 
-    .popup1 button:hover{
+    .popup1 button:hover {
         background: var(--button-hover-green);
     }
+
+
+
+    @media screen and (max-width: 1118px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 1%;
+        }
+
+        .table td {
+            font-size: 12px;
+        }
+
+        .table-header {
+            font-size: 14px;
+        }
+
+        .table-row img {
+            width: 20px;
+            height: 20px;
+        }
+    }
+
+    @media screen and(max-width: 946px) {
+
+        .updateData {
+            margin-left: 10px;
+        }
+
+        .cancelbtn1 {
+            width: 100px;
+        }
+
+        .updatebtn {
+            width: 100px;
+        }
+    }
+
+    @media screen and (max-width:862px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 0;
+            padding-left: 5%;
+        }
+
+        .main-right-top-one input {
+            width: 20%;
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+        }
+
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+
+        .table td {
+            font-size: 10px;
+        }
+
+        .table-header {
+            font-size: 12px;
+        }
+
+        .table-row img {
+            width: 17px;
+            height: 17px;
+        }
+
+    }
+
+    @media screen and (max-width: 692px) {
+        .table td {
+            font-size: 9px;
+        }
+
+        .table-header {
+            font-size: 10px;
+        }
+
+        .table-row img {
+            width: 15px;
+            height: 15px;
+        }
+
+        .main-right-bottom {
+            width: 160%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 160%;
+        }
+
+        .main-right-bottom-down {
+            width: 160%;
+        }
+
+        .table-header {
+            grid-template-columns: 8% 8% 13% 13% 14% 14% 14%;
+        }
+
+        .table-row {
+            grid-template-columns: 8% 8% 13% 13% 14% 14% 14%;
+        }
+    }
+
 
 
 }
