--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -242,7 +242,7 @@ input[type=file] {
   width: 285px;
   height: 40px;
   background-color: #f5f6fa;
-  margin: 10px 0;
+  margin-bottom: 1px;
   border-radius: 10px;
   padding: 0 .4rem;
   border: 1px solid #cdcdcd;
@@ -280,7 +280,7 @@ input[type=file] {
   width: 285px;
   height: 40px;
   background-color: #f5f6fa;
-  margin: 10px 0;
+  margin-bottom: 1px;
   border-radius: 10px;
   padding: 0 .4rem;
   border: 1px solid #cdcdcd;
@@ -583,13 +583,13 @@ input[type=file] {
   }
 
   .location_pop_content {
-      width: 700px;
+      width: 1000px;
       padding: 10px;
       background-color: #e6e1e1db;
       border-radius: 10px;
       padding: 20px;
       padding-bottom: 40px;
-      height: 350px;
+      height: 500px;
       overflow: hidden;
   }
 
@@ -624,7 +624,7 @@ input[type=file] {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.4);
   z-index: 98;
   display: none;
   }
