--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -186,6 +186,8 @@ form.sign-up-form {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  
 
 
 }
@@ -197,7 +199,7 @@ form.sign-up-form {
 }
 
 .top h1 {
-  margin-right: 30px;
+  margin-right: 10px;
 }
   
 }
