--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -98,10 +98,7 @@
     z-index: 2;
   }
   
-  .slogan {
-    font-size: 13px;
-    margin-bottom: 15px;
-  }
+  
   
   .input-field-container {
     display: flex;
@@ -187,6 +184,7 @@ form.sign-up-form {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 4px;
   
 
 
@@ -198,8 +196,14 @@ form.sign-up-form {
   cursor: pointer;
 }
 
-.top h1 {
+.top h2 {
   margin-right: 10px;
+  margin-top: 20px;
+}
+
+.slogan {
+  font-size: 13px;
+  margin-bottom: 35px;
 }
   
 }
