--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -124,6 +124,7 @@
   padding: 0 .9rem;
   border: 1px solid #b8b7b7;
   align-items: center;
+  margin-top: 10px;
 
 }
 
@@ -203,8 +204,17 @@ form.sign-up-form {
 
 .slogan {
   font-size: 13px;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
 }
+
+.line {
+  width: 100px;
+  height: 5px;
+  margin-bottom: 35px;
+  background: var(--green-color-one);
+  
+}
+
   
 }
 
